# SICXE-Assembler

./: .gitignore  CMakeLists.txt  ExpectedLisOutputp4_sourceasm.txt  Makefile  README.md  file_parse_exception.h  file_parser.cc  file_parser.h  opcode_error_exception.h  opcodetab.cc  opcodetab.h  sicxe_asm  sicxe_asm.cpp  sicxe_asm.h  symtab.cc  symtab.h  symtab_exception.h
source_files/: calebFile.asm  errorFile.asm  errorFile.lis  givenFile.asm  givenFile.lis  p4_source1.asm  p4_source1.lis  practiceWorksheet.asm  practiceWorksheet.lis  source1.asm  source1.lis  source2.asm  source3.asm  source4.asm  thirdFile.asm  thirdFile.lis
